--- a/Testappawsone/Dockerfile
+++ b/Testappawsone/Dockerfile
@@ -12,7 +12,7 @@ EXPOSE 8081
 FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 ARG BUILD_CONFIGURATION=Release
 WORKDIR /src
-COPY ["Testappawsone/Testappawsone/Testappawsone.csproj", "Testappawsone/"]
+COPY ["*", "Testappawsone/"]
 RUN dotnet restore "./Testappawsone/Testappawsone.csproj"
 COPY . .
 WORKDIR "/src/Testappawsone"
