--- a/Testappawsone/Testappawsone.csproj
+++ b/Testappawsone/Testappawsone.csproj
@@ -6,6 +6,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <UserSecretsId>4236f2b6-67c2-4fde-9c43-9817c5fc5d05</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+    <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
   </PropertyGroup>
 
   <ItemGroup>
