--- a/appspec.yml
+++ b/appspec.yml
@@ -1,19 +1,22 @@
-﻿version: 0.0
-os: "linux"
+version: 0.0
+os: linux
 files:
   - source: /
-    destination: /home/ec2-user/app
-
+    destination: /var/www/html/WordPress
 hooks:
   BeforeInstall:
-    - location: scripts/before_install.sh
+    - location: scripts/install_dependencies.sh
       timeout: 300
-      runas: ec2-user
+      runas: root
   AfterInstall:
-    - location: scripts/after_install.sh
+    - location: scripts/change_permissions.sh
       timeout: 300
-      runas: ec2-user
+      runas: root
   ApplicationStart:
     - location: scripts/start_server.sh
       timeout: 300
-      runas: ec2-user
+      runas: root
+  ApplicationStop:
+    - location: scripts/stop_server.sh
+      timeout: 300
+      runas: root
