--- a/appspec.yml
+++ b/appspec.yml
@@ -3,19 +3,26 @@ os: linux
 files:
   - source: /
     destination: /home/ec2-user/app
+
 hooks:
   BeforeInstall:
+    - location: scripts/beforeinstall.sh
+      timeout: 60
+      runas: root
     - location: scripts/install_dependencies.sh
       timeout: 300
       runas: root
+
   AfterInstall:
     - location: scripts/change_permissions.sh
       timeout: 300
       runas: root
+
   ApplicationStart:
     - location: scripts/start_server.sh
       timeout: 300
       runas: root
+
   ApplicationStop:
     - location: scripts/stop_server.sh
       timeout: 300
