--- a/appspec.yml
+++ b/appspec.yml
@@ -17,6 +17,9 @@ hooks:
     - location: scripts/change_permissions.sh
       timeout: 300
       runas: root
+    - location: scripts/install_service.sh
+      timeout: 60
+      runas: root
 
   ApplicationStart:
     - location: scripts/start_server.sh
